# evret

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: README.md  architecture.md  getting-started.md  index.md  judges.md  quickstart.md
docs/api/: evaluation.md  generation.md  integrations.md  judges.md  metrics.md  package.md  retrievers.md
docs/evaluation/: dataset-format.md  dataset-generation.md  overview.md
docs/integrations/: overview.md
docs/metrics/: average-precision.md  err.md  hit-rate.md  index.md  mrr.md  ndcg.md  precision.md  rbp.md  recall.md
docs/retrievers/: chroma.md  elasticsearch.md  milvus.md  overview.md  qdrant.md  weaviate.md
examples/: README.md  create_eval_dataset.py  demo_qdrant.py  eval_data.csv  eval_data.json  evaluate_retriever.py  generate_dataset.py  haystack_integration.py  langchain_integration.py  qdrant_1_index.py  qdrant_2_evaluate.py  qdrant_3_create_ground_truth.py  results.csv  results.json  test.py  tracing_and_monitoring.ipynb
examples/db/: meta.json
examples/db/collection/evret_eval/: storage.sqlite
examples/demo-qdrant/: evaluate.py  index.py
examples/evals-streamlit-dashboard/: run_evals_ui.py
examples/qdrant-streamlit-dashboard/: README.md  index.py  run_evals_ui.py
examples/qdrant-streamlit-dashboard/pipenv/: pyvenv.cfg
src/evret/: __init__.py  errors.py  logging.py  utils.py
src/evret/evaluation/: __init__.py  dataset.py  evaluator.py  judges.py  results.py
src/evret/generation/: __init__.py  dataset.py
src/evret/integrations/: __init__.py  haystack.py  langchain.py  llamaindex.py
src/evret/judges/: __init__.py  base.py  constants.py  semantic.py  token_overlap.py  utils.py
src/evret/judges/llm/: __init__.py  base.py  factory.py  prompts.py
src/evret/judges/llm/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py
src/evret/metrics/: __init__.py  _dcg.py  _ranking.py  _set_ops.py  _validation.py  average_precision.py  base.py  err.py  hit_rate.py  mrr.py  ndcg.py  precision.py  rbp.py  recall.py
src/evret/retrievers/: __init__.py  base.py  chroma.py  elasticsearch.py  milvus.py  qdrant.py  weaviate.py
tests/: README.md  test_utils.py
tests/evaluation/: test_dataset.py  test_evaluator.py  test_judges.py  test_results.py
tests/generation/: test_dataset_generation.py
tests/integration/: conftest.py  test_chroma_retriever.py  test_qdrant_retriever.py
tests/integrations/: test_haystack_adapter.py  test_langchain_adapter.py  test_llamaindex_adapter.py
tests/judges/: __init__.py  test_llm_google_provider.py  test_token_overlap.py
tests/metrics/: test_average_precision.py  test_err.py  test_hit_rate.py  test_mrr.py  test_ndcg.py  test_precision.py  test_rbp.py  test_recall.py
tests/retrievers/: test_base.py  test_chroma.py  test_elasticsearch.py  test_milvus.py  test_qdrant.py  test_weaviate.py
