[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evret"
version = "0.0.2"
description = "A focused retriever evaluation framework with standard ranking metrics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Evret Contributors" }]
keywords = ["retrieval", "information-retrieval", "evaluation", "metrics", "search"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "qdrant-client>=1.17.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
qdrant = ["qdrant-client>=1.9.0"]
chroma = ["chromadb>=0.5.0"]
weaviate = ["weaviate-client>=4.16.0"]
milvus = ["pymilvus>=2.4.0"]
langchain = [
  "langchain>=0.2.0",
  "langchain-community==0.4.1",
]
llamaindex = ["llama-index-core>=0.10.0"]
semantic = ["sentence-transformers>=2.2.0"]
llm-openai = ["openai>=1.0.0"]
llm-anthropic = ["anthropic>=0.18.0"]
llm-google = ["google-genai>=1.0.0"]
judges = [
  "sentence-transformers>=2.2.0",
  "openai>=1.0.0",
  "anthropic>=0.18.0",
  "google-genai>=1.0.0",
]
docs = [
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.0.0",
  "mkdocstrings[python]>=0.24.0",
]
all = [
  "qdrant-client>=1.9.0",
  "chromadb>=0.5.0",
  "weaviate-client>=4.16.0",
  "pymilvus>=2.4.0",
  "langchain>=0.2.0",
  "langchain-community==0.4.1",
  "llama-index-core>=0.10.0",
  "sentence-transformers>=2.2.0",
  "openai>=1.0.0",
  "anthropic>=0.18.0",
  "google-genai>=1.0.0",
]
integration = [
  "pytest>=8.0.0",
  "qdrant-client>=1.9.0",
  "chromadb>=0.5.0",
  "weaviate-client>=4.16.0",
  "pymilvus>=2.4.0",
  "langchain>=0.2.0",
  "langchain-community==0.4.1",
  "llama-index-core>=0.10.0",
  "testcontainers>=4.8.0",
]

[project.urls]
Homepage = "https://github.com/kaivid-labs/evret"
Repository = "https://github.com/kaivid-labs/evret"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
evret = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: marks Docker-backed integration tests",
]
